--- a/src/CloudFoundry.CloudController.Test.Integration/packages.config
+++ b/src/CloudFoundry.CloudController.Test.Integration/packages.config
@@ -4,6 +4,9 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
+  <package id="Mono.Security" version="3.2.3.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="PCLCrypto" version="0.5.2.14286" targetFramework="net45" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel.Client" version="3.5.0" targetFramework="net45" />
 </packages>
