--- a/src/CloudFoundry.CloudController.V2.Client/CloudFoundry.CloudController.V2.Client.csproj
+++ b/src/CloudFoundry.CloudController.V2.Client/CloudFoundry.CloudController.V2.Client.csproj
@@ -365,7 +365,9 @@
     <Compile Include="Metadata.cs" />
     <Compile Include="PageProperties.cs" />
     <Compile Include="PagedResponseCollection.cs" />
+    <Compile Include="ProgressInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PushJob.cs" />
     <Compile Include="RequestOptions.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="ZipUtil.cs" />
@@ -386,6 +388,12 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.5\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="PCLCrypto">
+      <HintPath>..\..\packages\PCLCrypto.0.5.2.14286\lib\portable-net40+sl50+win+wpa81+wp80\PCLCrypto.dll</HintPath>
+    </Reference>
+    <Reference Include="PCLCrypto.Abstractions">
+      <HintPath>..\..\packages\PCLCrypto.0.5.2.14286\lib\portable-net40+sl50+win+wpa81+wp80\PCLCrypto.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="PCLStorage">
       <HintPath>..\..\packages\PCLStorage.1.0.2\lib\portable-net45+wp8+wpa81+win8+monoandroid+monotouch+Xamarin.iOS+Xamarin.Mac\PCLStorage.dll</HintPath>
